syntax = "proto3";

package jobs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message DeleteInstallRequest {
  string install_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid\""
  ];
}

message DeleteInstallResponse {}
